# AzureGenAIOps

./: .env.example  .gitignore  =5.3.0  Dockerfile  END_TO_END_GUIDE.md  GITHUB_SECRETS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  README.md  WORKFLOW_FIXES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  infrastructure.yml  model-training.yml
data/raw/: sample_data.csv
infrastructure/: README.md  azuredeploy.json  azuredeploy.parameters.json
infrastructure/bicep/: existing-resources.bicep  main.bicep
infrastructure/bicep/modules/: ai-foundry.bicep  app-config.json  container-apps.bicep  key-vault.bicep  model-config.json  monitoring.bicep  openai.bicep  search.bicep  storage.bicep
infrastructure/bicep/parameters/: existing.parameters.json  main.parameters.json
infrastructure/scripts/: deploy-existing.sh  deploy-new.sh  deploy.ps1
notebooks/: 01-data-exploration.ipynb
scripts/: deploy_ml_pipeline.py  download_data.py  extract-secrets-to-github.sh  test_keyvault_access.py
src/: __init__.py  app.py  config.py
src/agents/: __init__.py
src/app_development/: __init__.py
src/common/: __init__.py  azure_foundry.py  keyvault_config.py  utils.py
src/data/: __init__.py  make_dataset.py
src/data_extraction/: __init__.py
src/data_generation/: __init__.py
src/embeddings/: __init__.py  embedding_generator.py
src/evaluation/: __init__.py
src/features/: __init__.py
src/inference/: __init__.py  inference_engine.py
src/llm_training/: __init__.py  fine_tuning.py
src/models/: azure_openai.py  train_model.py
src/monitoring/: __init__.py
src/prompts/: __init__.py
src/rag/: __init__.py  rag_pipeline.py
src/safety_security/: __init__.py  content_filter.py
src/serving/: __init__.py
src/structured_outputs/: __init__.py
src/visualization/: __init__.py
tests/: conftest.py  test_config.py  test_data_processing.py
